--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -2,13 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-#__next {
+/* #__next {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-}
+} */
 
 html {
   scroll-behavior: smooth;
   font-family: "Raleway", sans-serif;
+}
+
+.hero-img {
+  background-image: url(https://images.unsplash.com/photo-1492691527719-9d1e07e534b4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80);
 }
