--- a/my-app/styles/globals.css
+++ b/my-app/styles/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* #__next {
+#__next {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-} */
+}
 
 html {
   scroll-behavior: smooth;
